# BuzzOps

./: .gitignore  CLAUDE.md  LICENSE  README.md  claude_desktop_config.example.json  claude_desktop_config.json  pyproject.toml  test_buzzops.py
buzzops/: server.py
